# praxis

./: .env.example  .gitignore  .prettierrc.json  AGENTS.md  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main-release.yml
docs/: DATA_MODEL.md  LIFECYCLE_TYPES.md  MEMORY_STRATEGY.md  QUALITY_AUDIT.md  STORAGE_ARCHITECTURE.md  TASK_ENDPOINTS.md  TECHNICAL_DECISIONS.md
scripts/: generate-jump-list-icons.mjs  tauri.mjs
src/: main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  app_navigation.rs  badge.rs  checklist.rs  jump_list.rs  lib.rs  lifecycle.rs  main.rs  native_reminders.rs  notification_launch.rs  recurrence.rs  reminders.rs  showcase.rs  tags.rs  tasks.rs  tray.rs  vault.rs
src/app/: App.vue  router.ts
src/app/directives/: clickOutside.ts
src/app/layouts/: AppLayout.vue
src/app/providers/: TaskRuntimeProvider.vue
src/app/shell/: AppAside.vue  SearchTasksOverlay.vue  navigation.ts
src/app/styles/: main.css  theme.css
src/locales/: en.json  pt-BR.json
src/pages/archived/: ArchivedPage.vue
src/pages/completed/: CompletedPage.vue
src/pages/help/: HelpPage.vue
src/pages/my-week/: MyWeekPage.vue
src/pages/overdue/: OverduePage.vue
src/pages/pending/: PendingPage.vue
src/pages/reminders/: RemindersPage.vue
src/shared/ui/: Tag.vue  (+6 more)
src/stores/: app.store.ts  badge.store.ts  notification.store.ts  tag.store.ts  task.store.ts  vault.store.ts
(+70 files in other folders)
